@@ -84,6 +84,21 @@ def make_pipeline(nslots=2, nfilters=3, nplots=1, paths=None):
     return pl
 
 
+def test_2_1_1_new_key_emodulus_enabled():
+    """In Shape-Out 2.1.1 we introduces the "emodulus enabled" key
+
+    If it is disabled (reservoir measurements), then the emodulus
+    analysis options are not shown in the Slot options. See also
+    changes made in dclab 0.22.4 (test for reservoir existence).
+    """
+    spath = pathlib.Path(__file__).parent / "data" / "version_2_1_0_basic.so2"
+    pl = session.open_session(spath)
+    sc = pl.slots[0].config
+    assert "emodulus" in sc
+    assert "emodulus enabled" in sc["emodulus"]
+    assert sc["emodulus"]["emodulus enabled"]
+
+
 def test_file_hash():
     tempdir = pathlib.Path(tempfile.mkdtemp(prefix="test_shapeout2_session_"))
     # custom path to measurement
